--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<script src="https://raw.githubusercontent.com/sathyatesting001/web/main/attacker.js"></script>
+<script>
+  // Simulate an HTTP redirect:
+alert(document.domain)
+window.location.replace("http://www.w3schools.com");
+
+</script>
